Added checks to users layout on homepage, hides certain features depending on what user has toggled